# rust-actix-rest-pg-crud

./: Cargo.toml  README.md
src/: app_error.rs  app_utils.rs  data_structs.rs  db_crud.rs  db_ops.rs  main.rs  pg_ops_advanced.rs  pg_ops_basic.rs
src/db_crud/: data_validations.rs  db_common.rs  http_ops_data.rs  merging_data.rs  resource_ops_data.rs  table_queries.rs
